[gd_scene load_steps=12 format=3 uid="uid://buiy14y4dkj8e"]

[ext_resource type="Script" uid="uid://dtc2e2bn28l0y" path="res://scenes/world/objects/coin/coin.gd" id="1_d5gmh"]
[ext_resource type="Shader" uid="uid://lean60ke2pif" path="res://shaders/polygon.gdshader" id="2_u1pie"]
[ext_resource type="AudioStream" uid="uid://d3xa420i3hskf" path="res://assets/audio/sounds/coins/collecting.wav" id="2_v7riw"]
[ext_resource type="AudioStream" uid="uid://ba4p6nrcs3m2" path="res://assets/audio/sounds/coins/collect.wav" id="3_pdq0q"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_6qpsl"]
friction = 0.0
bounce = 1.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_qr0nf"]
shader = ExtResource("2_u1pie")
shader_parameter/fill_color = Color(1, 0, 0, 1)
shader_parameter/outline_color = Color(0.80784315, 0, 0.07058824, 1)
shader_parameter/outline_thickness = 2.0
shader_parameter/polygon_sides = 6

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_y8lri"]
size = Vector2(16, 16)

[sub_resource type="CircleShape2D" id="CircleShape2D_6qpsl"]
radius = 12.0

[sub_resource type="CircleShape2D" id="CircleShape2D_d5gmh"]
radius = 192.0

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_w14il"]
random_pitch = 1.1
streams_count = 1
stream_0/stream = ExtResource("2_v7riw")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_h4etq"]
random_pitch = 1.1
streams_count = 1
stream_0/stream = ExtResource("3_pdq0q")

[node name="Coin" type="RigidBody2D"]
z_index = -1
collision_layer = 16
collision_mask = 17
mass = 20.0
physics_material_override = SubResource("PhysicsMaterial_6qpsl")
gravity_scale = 0.0
lock_rotation = true
linear_damp = 4.0
script = ExtResource("1_d5gmh")

[node name="Sprite2D" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_qr0nf")
texture = SubResource("PlaceholderTexture2D_y8lri")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
unique_name_in_owner = true
shape = SubResource("CircleShape2D_6qpsl")

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource("CircleShape2D_d5gmh")

[node name="CollectingSound" type="AudioStreamPlayer2D" parent="."]
unique_name_in_owner = true
stream = SubResource("AudioStreamRandomizer_w14il")

[node name="CollectSound" type="AudioStreamPlayer2D" parent="."]
unique_name_in_owner = true
stream = SubResource("AudioStreamRandomizer_h4etq")

[node name="PhysicsDisableTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
autostart = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_entered" from="Hitbox" to="." method="_on_hitbox_body_entered"]
[connection signal="timeout" from="PhysicsDisableTimer" to="." method="_on_physics_disable_timer_timeout"]
